Login and Register form background image fix on mobile

--- a/src/app/components/pages/profile-authentication/login/login.component.scss
+++ b/src/app/components/pages/profile-authentication/login/login.component.scss
@@ -192,6 +192,14 @@
         }
     }
 
+    .login-bg {
+        background-image: none;
+    }
+
+    .login-form {
+        width: 70%;
+        margin: auto;
+    }
 }
 @media only screen and (min-width: 576px) and (max-width: 767px) {
 
